# porepy_equilibration

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: docker.yml
apps/example1/: __init__.py  __main__.py  config.toml  network_outcrop_salt_cove_1.csv
apps/example2/: __init__.py
apps/example3/: __init__.py
src/porepy_equilibration/: __init__.py  auxiliary.py  bc.py  contact.py  fracture_states.py  geometry.py  gravity.py  model.py  solver_statistics.py
src/porepy_equilibration/data/: salt_cove_fractures_vertical.csv
src/porepy_equilibration/porepy/: constitutive_laws.py  contact_mechanics.py  fluid_mass_balance.py  momentum_balance.py  poromechanics.py  solution_strategy.py
