[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "porepy-equilibration"
version = "0.1.0"
description = "Consistent initialization of mixed-dimensional multiphysics models for fractured reservoirs under geomechanical constraints and field measurements"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = ["porepy", "pypardiso"]

[project.optional-dependencies]
dev = ["isort"]

[project.scripts]
example1 = "apps.example1:main"
example2 = "apps.example2:main"
example3 = "apps.example3:main"

[tool.hatch.build.targets.wheel]
packages = ["src/porepy_equilibration", "apps/example1", "apps/example2", "apps/example3"]

[tool.uv.sources]
porepy = { path = "external/porepy", editable = true }
